--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ management skills. Her main interests are in software testing ,software developm
 			
 			
 				<article>
-					<h2><a href="https://pragmatic.bg/courses/software-testing-course/?fbclid=IwAR06XAWdmFNGovAvKVJyUJxEi_FICWYndHwzVFcx5-Tw9GYfWminccAnSlg">Pragmatic academy </a></h2>
+					<h2><a href="https://pragmatic.bg/courses/software-testing-course/">Pragmatic academy</a></h2>
 					<p class="subDetails">Software Testing </p>
 					
 
