--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>email:<a"maria.shahamova@gmail.com" target="_blank"> maria.shahamova@gmail.com</a></li>
-				<li>Linkdin: <a href="https://www.linkedin.com/in/maria-shahamova-a88065174/">Maria.Shahamova</a></li>
+				<li>email:<a"maria.shahamova@gmail.com" target="_blank">maria.shahamova@gmail.com</a></li>
+				<li>Linkedin:<a href="https://www.linkedin.com/in/maria-shahamova-a88065174/">Maria.Shahamova</a></li>
 				<li>mobile:+359877928895</li>
 			</ul>
 		</div>
