--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ period. She is an affective team player. When faced with unexpected challenges, 
 			
 			
 				<article>
-					<h2><a href="https://pragmatic.bg/courses/software-testing-course/?fbclid=IwAR06XAWdmFNGovAvKVJyUJxEi_FICWYndHwzVFcx5-Tw9GYfWminccAnSlg">Pragmatic academy </a></h2>
+					<h2><a href="https://pragmatic.bg/courses/software-testing-course/">Pragmatic academy </a></h2>
 					<p class="subDetails">Software Testing </p>
 					
 
