--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>email:<a"maria.shahamova@gmail.com" target="_blank"> maria.shahamova@gmail.com</a></li>
+				<li>Еmail:<a"maria.shahamova@gmail.com" target="_blank"> maria.shahamova@gmail.com</a></li>
 				<li>Linkdin: <a href="https://www.linkedin.com/in/maria-shahamova-a88065174/">Maria.Shahamova</a></li>
-				<li>mobile:+ 359877928895</li>
+				<li>Мobile:+ 359877928895</li>
 			</ul>
 		</div>
 		<div class="clear"></div>
@@ -62,6 +62,7 @@ period. She is an affective team player and proactively manages to fulfill fer f
 					<h2>Tek Experts - Technical Support Engeener L1  </h2>
 					<p class="subDetails">August 2019 - Present</p>
 					<p><ul class="TECHNICAL SKILLS	">
+					<li> Working with ssl, http, dhcp, tcp/ip, networking, integration </li> 
 					<li>Provide software support to customers and partners via the web, email and phone</li>
 					<li>Collaborate closely with team members from support, engineering and product management to resolve customer issues, advocate product enhancements, bug fixes, provide feedback on important features, product gaps and supportability matters</li>
 					<li>Use sound judgment to escalate issues, as needed </li>
