--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>Еmail:<a"maria.shahamova@gmail.com" target="_blank"> maria.shahamova@gmail.com</a></li>
+				<li>email:<a"maria.shahamova@gmail.com" target="_blank"> maria.shahamova@gmail.com</a></li>
 				<li>Linkdin: <a href="https://www.linkedin.com/in/maria-shahamova-a88065174/">Maria.Shahamova</a></li>
-				<li>Мobile:+ 359877928895</li>
+				<li>mobile: +359 877928895</li>
 			</ul>
 		</div>
 		<div class="clear"></div>
@@ -45,7 +45,7 @@
 				
 				<div class="sectionContent">
 					<p>Maria is a very positive and communicative person. She learns and applies new skills within the expected time
-period. She is an affective team player and proactively manages to fulfill fer full responsibilities.When faced with unexpected challenges, Maria is very resourceful even when no mentoring or supervision is provided.Her main interests in IT are closely related to software testing and maintenance as an active participant in the SDLC process of the RnD team. </p>
+period. She is an еffective team player and proactively manages to fulfill fer full responsibilities.When faced with unexpected challenges, Maria is very resourceful even when no mentoring or supervision is provided. Her main interests in IT are closely related to software testing and maintenance active participant in the SDLC process of the RnD team </p>
 				</div>
 			</article>
 			<div class="clear"></div>
@@ -62,7 +62,7 @@ period. She is an affective team player and proactively manages to fulfill fer f
 					<h2>Tek Experts - Technical Support Engeener L1  </h2>
 					<p class="subDetails">August 2019 - Present</p>
 					<p><ul class="TECHNICAL SKILLS	">
-					<li> Working with ssl, http, dhcp, tcp/ip, networking, integration </li> 
+					<li> Working with ssl, http, dhcp, tcp/ip, networking, integration  </li>
 					<li>Provide software support to customers and partners via the web, email and phone</li>
 					<li>Collaborate closely with team members from support, engineering and product management to resolve customer issues, advocate product enhancements, bug fixes, provide feedback on important features, product gaps and supportability matters</li>
 					<li>Use sound judgment to escalate issues, as needed </li>
@@ -86,6 +86,7 @@ period. She is an affective team player and proactively manages to fulfill fer f
 			
 			<div class="sectionContent">
 				<ul class="TECHNICAL SKILLS	">
+			
 				<li> Working with virtual machines </li>
 				<li> Experience with WebEx sessions </li>
 					<li>Тesting REST/SOAP services with POSTMAN and SOAP UI</li>
