--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div class="mainDetails">
 		
 		
-		<div id="Maria Shahamova">
+		<div class="sectionTitle" id="Maria Shahamova">
 			<h1 class="quickFade delayTwo">Maria Shahamova</h1>
 		</div>
 		
