--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 	<div class="mainDetails">
 		
 		
-		<div class="sectionTitle" id="Maria Shahamova">
+		<div  class="sectionTitle" id="Maria Shahamova">
 			<h1 class="quickFade delayTwo">Maria Shahamova</h1>
 		</div>
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>email:<a"maria.shahamova@gmail.com" target="_blank"> maria.shahamova@gmail.com</a></li>
+				<li>Email:<a"maria.shahamova@gmail.com" target="_blank"> maria.shahamova@gmail.com</a></li>
 				<li>Linkdin: <a href="https://www.linkedin.com/in/maria-shahamova-a88065174/">Maria.Shahamova</a></li>
-				<li>mobile: +359 877928895</li>
+				<li>Mobile: +359 877928895</li>
 			</ul>
 		</div>
 		<div class="clear"></div>
@@ -45,7 +45,7 @@
 				
 				<div class="sectionContent">
 					<p>Maria is a very positive and communicative person. She learns and applies new skills within the expected time
-period. She is an еffective team player and proactively manages to fulfill fer full responsibilities.When faced with unexpected challenges, Maria is very resourceful even when no mentoring or supervision is provided. Her main interests in IT are closely related to software testing and maintenance active participant in the SDLC process of the RnD team </p>
+period. She is an еffective team player and proactively manages to fulfill fer full responsibilities.When faced with unexpected challenges, Maria is very resourceful even when no mentoring or supervision is provided. Her main interests in IT are closely related to software testing and maintenance as an  active participant in the SDLC process of the RnD team </p>
 				</div>
 			</article>
 			<div class="clear"></div>
