--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ period. She is an еffective team player and proactively manages to fulfill fer 
 			
 				<li> Working with virtual machines </li>
 				<li> Experience with WebEx sessions </li>
-					<li>Тesting REST/SOAP services with POSTMAN and SOAP UI</li>
+					<li>Тesting REST/SOAP API with POSTMAN and SOAP UI</li>
 					<li>Test execution </li>
 					<li>Test management systems </li>
 						<li>Logging defects</li>
