--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ period. She is an еffective team player and proactively manages to fulfill fer 
 					<h2>Tek Experts - Technical Support Engeener L1  </h2>
 					<p class="subDetails">August 2019 - Present</p>
 					<p><ul class="TECHNICAL SKILLS	">
-					<li> Working with ssl, http, dhcp, tcp/ip, networking, integration  </li>
+					<li> Working with SSL, HTTP, DHCP, TCP/IP, networking, integration  </li>
 					<li>Provide software support to customers and partners via the web, email and phone</li>
 					<li>Collaborate closely with team members from support, engineering and product management to resolve customer issues, advocate product enhancements, bug fixes, provide feedback on important features, product gaps and supportability matters</li>
 					<li>Use sound judgment to escalate issues, as needed </li>
