--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				
 				<div class="sectionContent">
 					<p>Maria is a very positive and communicative person. She learns and applies new skills within the expected time
-period. She is an еffective team player and proactively manages to fulfill fer full responsibilities.When faced with unexpected challenges, Maria is very resourceful even when no mentoring or supervision is provided. Her main interests in IT are closely related to software testing and maintenance as an  active participant in the SDLC process of the RnD team </p>
+period. She is an еffective team player and proactively manages to fulfill her full responsibilities.When faced with unexpected challenges, Maria is very resourceful even when no mentoring or supervision is provided. Her main interests in IT are closely related to software testing and maintenance as an  active participant in the SDLC process of the RnD team </p>
 				</div>
 			</article>
 			<div class="clear"></div>
